DAO structure + services changed